--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forestfire/core",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Wannes Salomé <mail@wannessalome.nl>",
   "license": "MIT",
   "scripts": {
