--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,6 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "allowJs": true,
-    "jsx": "react",
-    "noEmit": true
+    "allowSyntheticDefaultImports": true
   }
 }
