Remove unnecessary config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,14 @@
   /* Add your custom configuration after this */
   "include": ["src/**/*"],
   "compilerOptions": {
-    "target": "es5",
-    "outDir": "dist",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
     "esModuleInterop": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "outDir": "dist",
+    "strict": true,
+    "target": "es5"
   }
 }
