Add isResult function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "./node_modules/poetic/config/typescript/tsconfig.json",
   /* Add your custom configuration after this */
   "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.ts"],
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
