--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist",
     "strict": true,
